some responsive classes, solved flicker issue for the signup path

--- a/src/sass/components/_signup.sass
+++ b/src/sass/components/_signup.sass
@@ -437,6 +437,10 @@
         padding-left: 30px
         padding-right: 30px
 
+    &__info
+      margin-bottom: 20px
+
+
 +r($mobile)
   .signup
     margin-top: 80px
@@ -463,3 +467,6 @@
         padding-left: 10px
         padding-right: 10px
         margin-bottom: 35px
+
+    &__info
+      padding: 15px 10px
