--- a/src/sass/elements/_ui.sass
+++ b/src/sass/elements/_ui.sass
@@ -71,6 +71,11 @@
   .ui-group
     > input, > textarea
       padding-left: 10px
+    &__tooltip
+      top: auto
+      bottom: 8px
+      right: 8px
+
 
 .ui-input-validation
   position: absolute
@@ -249,7 +254,7 @@
       transition: transform .2s ease
     &--no-text
       // plain checkbox without the label
-      
+
     span
       display: inline-block
       padding-left: 35px
